--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #fff;
+  /*min-height: 100vh;*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #000;
+  padding-top: 15px;
+  padding-bottom: 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.header{
+  font-size: 50px;
+  font-weight: 100;
+  margin-bottom: 0px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.common-card-design{
+  opacity: 1;
+  background-color: gray;
+  /*box-shadow: 0px 3px 6px #EFEFEF29 !important;*/
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+  text-align: left;
+  justify-content: flex-start;
+  color:#000000;
+  cursor:pointer;
+  height:105px;
+  margin-bottom: 20px;
+  flex-direction:column;
+  width:340px;
+  height: 220px;
+  border: none; 
+  margin-top: 20px;
+}
+.card-content{
+  margin-top: 90px;
+  display: flex;
+  justify-content: center;
+}
+.card-number{
+  color: #fff;
+}
+.nameText{
+  display: flex;
+  justify-content: center;
+  color: #a2a2a2;
+  font-size: 16px;
+  font-weight: 500; 
+}
+.Validtext{
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+}
+.MuiOutlinedInput-root{
+  /*width: 440px;*/
 }
